[gd_scene load_steps=7 format=3 uid="uid://4hxfda0fvecm"]

[ext_resource type="Script" path="res://HoleInWallMinigane/wall_minigame.gd" id="1_i7wdh"]
[ext_resource type="PackedScene" uid="uid://c068idoo7nx73" path="res://HoleInWallMinigane/wall_players_rope.tscn" id="3_gi4f8"]
[ext_resource type="Script" path="res://HoleInWallMinigane/astroid_spawner.gd" id="3_hiaym"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_uomkt"]
sky_top_color = Color(0.0474158, 0.0894499, 0.15262, 1)
sky_horizon_color = Color(0.0823529, 0.0862745, 0.109804, 1)
sky_curve = 0.126134
ground_bottom_color = Color(0.134164, 0.163229, 0.203355, 1)
ground_horizon_color = Color(0.0756164, 0.0910377, 0.103178, 1)
ground_curve = 0.16

[sub_resource type="Sky" id="Sky_fmlju"]
sky_material = SubResource("ProceduralSkyMaterial_uomkt")

[sub_resource type="Environment" id="Environment_yvyvf"]
background_mode = 2
sky = SubResource("Sky_fmlju")
ambient_light_energy = 6.0
reflected_light_source = 2

[node name="WallMinigameMain" type="Node3D"]
script = ExtResource("1_i7wdh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yvyvf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.749014, 0.662555, 0, -0.662555, 0.749014, 0, 0, 25.8418)
light_energy = 1.61

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.995808, 0.0914667, 0, -0.0914667, 0.995808, -11.4575, 4.87746, 10.5326)

[node name="Score" type="Label" parent="HBoxContainer/SubViewportContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Score"

[node name="SubViewportContainer2" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Camera3D2" type="Camera3D" parent="HBoxContainer/SubViewportContainer2/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.995808, 0.0914667, 0, -0.0914667, 0.995808, 6.96886, 4.83887, 10.5326)

[node name="Score" type="Label" parent="HBoxContainer/SubViewportContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Score"

[node name="Astroid Spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.53616, 4.21563, -16.1533)
script = ExtResource("3_hiaym")

[node name="Astroid Spawner2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.7356, 4.216, -16.153)
script = ExtResource("3_hiaym")

[node name="Wall_Players_rope2" parent="." instance=ExtResource("3_gi4f8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.9321, 0, 0)
right_player = 1

[node name="Wall_Players_rope" parent="." instance=ExtResource("3_gi4f8")]
left_player = 2
right_player = 3

[connection signal="astroid_hit" from="Wall_Players_rope2" to="." method="_on_wall_players_rope_2_astroid_hit"]
[connection signal="astroid_hit" from="Wall_Players_rope" to="." method="_on_wall_players_rope_astroid_hit"]
